# gaussianFilterOpengl

./: CMakeLists.txt
shader/: sprite.frag
src/: main.c
